<resources>
    <string name="app_name" translatable="false">ŚDM Mistrzejowice</string>
    <string name="alert_no_internet">The application requires an internet connection. Please turn on WiFi or mobile data connection and restart the application.</string>
    <string name="label_go_to_settings">Go to settings</string>
    <string name="label_dialog_warning">Warning</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="alert_no_gps">To ensure full functionality of the application, please turn on GPS in settings.</string>
    <string name="label_not_now">Not now</string>
    <string name="alert_no_gps_permission">This application requires that you allow it to access device\'s location data. It is used only to show your location. We do not store or share this data. Do you want to enable location data?</string>
    <string name="title_activity_main" translatable="false">ŚDM Mistrzejowice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_yes">Yes</string>
    <string name="alert_permissions_later">You can grant this permission later in Settings</string>
    <string name="data_shared_prefs" translatable="false">net.machina.sdmmistrzejowice.sharedprefs</string>
    <string name="map_click_to_navigate">Tap to navigate</string>
    <string name="category_church">Church</string>
    <string name="category_bank">Bank</string>
    <string name="category_pharmacy">Pharmacy</string>
    <string name="category_exchange">Exchange</string>
    <string name="category_shop">Grocery</string>
    <string name="category_clinic">Medical Center</string>
    <string name="menu_select_category">Select destination category</string>
    <string name="category_school">Accomodation</string>
    <string name="category_all">All categories</string>
    <string name="menu_emergency">In case of emergency...</string>
    <string name="menu_about_license">About...</string>
    <string name="call_emergency">Call Emergency Phone (112)</string>
    <string name="call_police">Call Police (997)</string>
    <string name="call_paramedic">Call Paramedics (999)</string>
    <string name="call_firedept">Call Fire Department (998)</string>
    <string name="call_safetyline">Safety Line for Tourists (+48608599999)</string>
</resources>
