<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_select_category">
        <menu>
            <item android:id="@+id/menu_cat_church" android:icon="@drawable/church" android:title="@string/category_church"/>
            <item android:id="@+id/menu_cat_accomodation" android:icon="@drawable/accomodation" android:title="@string/category_school"/>
            <item android:id="@+id/menu_cat_exchange" android:icon="@drawable/exchange" android:title="@string/category_exchange"/>
            <item android:id="@+id/menu_cat_bank" android:icon="@drawable/bank" android:title="@string/category_bank"/>
            <item android:id="@+id/menu_cat_grocery" android:icon="@drawable/shop" android:title="@string/category_shop"/>
            <item android:id="@+id/menu_cat_pharmacy" android:icon="@drawable/pharmacy" android:title="@string/category_pharmacy"/>
            <item android:id="@+id/menu_cat_medicalcenter" android:icon="@drawable/first_aid" android:title="@string/category_clinic"/>
            <item android:id="@+id/menu_cat_all" android:title="@string/category_all"/>
        </menu>
    </item>

    <item android:id="@+id/menu_emergency" android:title="@string/menu_emergency"/>
    <item android:id="@+id/menu_about" android:title="@string/menu_about_license"/>
</menu>